fixes miss-alignment

--- a/assets/fetools/fetools.css
+++ b/assets/fetools/fetools.css
@@ -2,7 +2,7 @@ div#sw-fetools {
 	z-index:10000;
 	position:fixed;
 	top:40px;
-	left:-200px;
+	left:-202px;
 	width:200px;
 	border-right: 2px solid #efefef;
 	border-bottom: 2px solid #efefef;
